[tool.poetry]
name = "fcc-demographic-data-analyzer"
version = "0.1.0"
description = ""
authors = ["dkleber89 <dkleber89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
